--- a/todo
+++ b/todo
@@ -1,22 +1,22 @@
 # Default Setup
 x remove the "language" manifest key, use "build: ./web3api.build.yaml" or "build: wasm/assemblyscript"
-- build manifest proper
-- - update the existing manifest code to use "RootManifest"
-- - Add "BuildManifest" to the core
-- - validate web3api.build.yaml manifest
-- - env.json gets added to env property in the json schema
-- dockerfile default env variables values
-- default build manifest for wasm/assemblyscript
-- - define custom manifest to be used
-- Use query.module.file in the docker file
-- whitelist instead of a blacklist (better for security)
-- mustache template?
-- - use this for includes
-- - use this building query and/or mutation
+x build manifest proper
+x x update the existing manifest code to use "RootManifest"
+x x Add "BuildManifest" to the core
+x x validate web3api.build.yaml manifest
+x x env.json gets added to env property in the json schema
+x dockerfile default env variables values
+x default build manifest for wasm/assemblyscript
+x x define custom manifest to be used
+x Use query.module.file in the docker file
+x whitelist instead of a blacklist (better for security)
+x mustache template?
+x x use this for includes
+x x use this building query and/or mutation
 - should we treat the build images like we do the services
   for the test-env? making them seperate npm packages?
 - - (yes, but do after mege, use test-env)
-- Remove ONBUILD in the "leaf" image
+x Remove ONBUILD in the "leaf" image
 
 # Misc Cleanup
 - intl strings
@@ -29,9 +29,9 @@ x remove the "language" manifest key, use "build: ./web3api.build.yaml" or "buil
 - - docker should do this, make sure. Mayybe there's another command we can run before to verify all env vars exist?
 - - docker validate? docker-compose config
 
-- remove asc version from build-env image
+x remove asc version from build-env image
 
-- TODO
+x TODO
   include:
     - src/**/*
     - package.json
@@ -44,35 +44,3 @@ ONBUILD COPY {{.}} ./
 - TODO
 outputDir: ./output
 remove "buildDir"
-
-option 1
-
-format: 0.0.1-prealpha.2
-description: SimpleStorage Web3API Example
-repository: https://github.com/web3-api/demos
-build:
-  language: wasm/assemblyscript
-  manifest: ./web3api.build.yaml
-mutation:
-  schema: ./src/mutation/schema.graphql
-  module: ./src/mutation/index.ts
-query:
-  schema: ./src/query/schema.graphql
-  module: ./src/query/index.ts
-
-option 2
-
-format: 0.0.1-prealpha.2
-description: SimpleStorage Web3API Example
-repository: https://github.com/web3-api/demos
-build:
-  manifest: ./web3api.build.yaml
-  codegen: wasm/assemblyscript
-  modules:
-    mutation:
-      schema: ./src/mutation/schema.graphql
-      module: ./src/mutation/index.ts
-    query:
-      schema: ./src/query/schema.graphql
-      module: ./src/query/index.ts
-
