--- a/todo
+++ b/todo
@@ -10,13 +10,13 @@ x default build manifest for wasm/assemblyscript
 x x define custom manifest to be used
 x Use query.module.file in the docker file
 x whitelist instead of a blacklist (better for security)
-x mustache template?
+x mustache template? yes.
 x x use this for includes
 x x use this building query and/or mutation
+x Remove ONBUILD in the "leaf" image
 - should we treat the build images like we do the services
   for the test-env? making them seperate npm packages?
 - - (yes, but do after mege, use test-env)
-x Remove ONBUILD in the "leaf" image
 
 # Misc Cleanup
 - intl strings
@@ -44,3 +44,10 @@ ONBUILD COPY {{.}} ./
 - TODO
 outputDir: ./output
 remove "buildDir"
+
+# test
+- Project w/o web3api.build.yaml
+- Project w/ web3api.build.yaml but no dockerfile
+- Project w/ dockerfile
+- Project w/ web3api.yaml in sub directory
+- Project w/ missing config variable
