--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 * 0. Remove _w3_init
-* 1. Remove Box for non-circular objects (only use for circular relationships)
+* [DONE]   1. Remove Box for non-circular objects (only use for circular relationships)
 * 2. size
 * 3. full test coverage
 
-* 4. Handle JSON types in MsgPack, Test-Cases, and Schema Bindings
+* [DONE]   4. Handle JSON types in MsgPack, Test-Cases, and Schema Bindings
