add bignumber to rust

--- a/todo
+++ b/todo
@@ -33,9 +33,6 @@ write_encoder.rs:
 * all existing assemblyscript test cases are ported to rust
 
 # TODO
-## Common Types
-- removed support for it, can add back in the future...
-
 ## CI/CD
 - ensure the VERSION string is applied to the wasm-rs crate package
 - ensure CI + CD workflows are correct
@@ -46,10 +43,10 @@ write_encoder.rs:
 - run tests
 
 ## BigNumber Type Support
-- research bignum Rust type
-- add to wasm-rs runtime
-- add bindings
-- run tests
+x research bignum Rust type
+x add to wasm-rs runtime
+x add bindings
+x run tests
 
 ## Map Type Support
 - research
